--- a/posts/dialogue-system.mdx
+++ b/posts/dialogue-system.mdx
@@ -1,5 +1,5 @@
 ---
-title: Creating a dialogue editor/system in Unity
+title: Creating a dialogue editor/system for Unity projects
 description: "How I used Scriptable Objects and the NodeEditor API to make a designer-friendly dialogue system."
 date: Aug 12 2022
 ---
