--- a/posts/scene-loader.mdx
+++ b/posts/scene-loader.mdx
@@ -1,5 +1,5 @@
 ---
-title: Making a Scene Loader Tool for Unity's editor
+title: A scene loading tool for Unity's editor
 description: "Extending the Unity editor's functionality to make a nifty scene loading tool that saves time."
 date: Aug 2 2022
 ---
