--- a/posts/post-mortem.mdx
+++ b/posts/post-mortem.mdx
@@ -1,5 +1,5 @@
 ---
-title: Post-mortem on past prototypes
-description: "Taking a look at old Unity prototypes and what I learned from them."
+title: A quick look at shaders
+description: "A brief overview of shaders, what they are and how to make them using Unity's shader graph."
 date: May 4 2022
 ---
