--- a/posts/scene-loader.mdx
+++ b/posts/scene-loader.mdx
@@ -1,7 +1,9 @@
 ---
-title: A scene loading tool for Unity's editor
+title: A scene loading  editor tool for Unity
 description: "Extending the Unity editor's functionality to make a nifty scene loading tool that saves time."
 date: Aug 2 2022
 ---
 
-This is an example post. There's another one [here](/posts/example-post).
+A small tool to help me switch scenes in the Unity editor without having to rummage through all your directories. Super simple implementation, but small quality of like editor tools help save huge amounts of time. 
+
+https://github.com/GarcGustavo/DungeonAutomata/tree/main/_Project/Editor
