--- a/posts/crt-shader.mdx
+++ b/posts/crt-shader.mdx
@@ -5,3 +5,4 @@ date: Feb 10 2022
 ---
 
 This is a small shader I made to test out Unity's built-in shader graph tools. It's a simple shader that distorts a camera's input and displays it on a render texture that covers the player's main viewport.
+![test](/images/doodle1.png "test")
