--- a/posts/dialogue-system.mdx
+++ b/posts/dialogue-system.mdx
@@ -12,3 +12,5 @@ Once a dialogue object is created, adding it is as simple as dragging it unto an
 I want to move away from using the Unity editor for writing out scripts later on, possibly parsing a simple txt or JSON file containing the dialogue.
 
 https://github.com/GarcGustavo/DungeonAutomata
+
+<img src="/images/doodle1.png" alt="MarineGEO circle logo" style="height: 100px; width:100px;"/>
