--- a/posts/grid-tools.mdx
+++ b/posts/grid-tools.mdx
@@ -8,3 +8,4 @@ This isn't a single project but a collection of various tools I've created to ai
 This also includes some basic editor tools that I use to quickly create units, tiles, and other data without having to leave the Unity editor.
 
 https://github.com/GarcGustavo/DungeonAutomata
+<img src="/images/doodle1.png" alt="MarineGEO circle logo" style="height: 100px; width:100px;"/>
