--- a/posts/rail-movement.mdx
+++ b/posts/rail-movement.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to use Cinemachine to implement rail movement
+title: Rail movement using Cinemachine
 description: "A small experiment using Unity's Cinemachine package to imitate Nier camera/gameplay transitions."
 date: Jun 2 2022
 ---
