--- a/posts/road-mesh-generation.mdx
+++ b/posts/road-mesh-generation.mdx
@@ -1,5 +1,5 @@
 ---
-title: Hello World
+title: Roads, Benzier curves, and mesh generation
 description: "Test devlog please ignore"
 date: Feb 10 2022
 ---
