--- a/posts/scene-loader.mdx
+++ b/posts/scene-loader.mdx
@@ -1,5 +1,5 @@
 ---
-title: A scene loading  editor tool for Unity
+title: Scene loading editor tool for Unity
 description: "Extending the Unity editor's functionality to make a nifty scene loading tool that saves time."
 date: Aug 2 2022
 ---
