--- a/posts/urp-shaders.mdx
+++ b/posts/urp-shaders.mdx
@@ -1,5 +1,5 @@
 ---
-title: A quick look at "doodle"-esque displacement and lighting shaders.
+title: Doodle displacement and lighting shaders.
 description: "A brief overview of some shaders I made to achieve a 2D doodle aesthetic with 3D lighting using Unity URP."
 date: May 4 2022
 ---
