--- a/posts/grid-tools.mdx
+++ b/posts/grid-tools.mdx
@@ -2,7 +2,9 @@
 title: Grid utility editor tools and other helpful functions
 description: "A suite of utility tools used to create grid-based games."
 date: Feb 10 2022
+<img src="/images/doodle1.png" alt="MarineGEO circle logo" style="height: 100px; width:100px;"/>
 ---
+<img src="/images/doodle1.png" alt="MarineGEO circle logo" style="height: 100px; width:100px;"/>
 
 This isn't a single project but a collection of various tools I've created to aid with rapidly prototyping grid-based games. 
 This also includes some basic editor tools that I use to quickly create units, tiles, and other data without having to leave the Unity editor.
