--- a/posts/crt-shader.mdx
+++ b/posts/crt-shader.mdx
@@ -3,5 +3,5 @@ title: CRT Shader
 description: "Using Unity's shader graph to create a retro looking CRT shader"
 date: Feb 10 2022
 ---
-<img src="doodle1.png"></img>
+<img src="./doodle1.png"></img>
 This is a small shader I made to test out Unity's built-in shader graph tools. It's a simple shader that distorts a camera's input and displays it on a render texture that covers the player's main viewport.
