--- a/posts/dialogue-system.mdx
+++ b/posts/dialogue-system.mdx
@@ -1,10 +1,10 @@
 ---
-title: Unity dialogue system
+title: Scriptable objects for dialogue systems
 description: "Using Scriptable Objects to make a designer-friendly dialogue system."
-date: Aug 12 2022
+date: Feb 13 2023
 ---
 
-This is a dialogue system that uses scriptable objects to manage dialogue sequences as data. I developed it because I needed a simple tool for quickly adding dialogue or interactions to different types of games. 
+This is a dialogue system that uses scriptable objects to manage dialogue sequences as data. I needed a simple tool for quickly adding dialogue or interactions to different types of games, so I decided to make something lightweight for non-technical users. 
 It uses an IActor and IPanel interface to allow for dependency injection, letting you define any monobehaviour as an Actor that can be interacted with. 
 Here's a small example of it working in conjunction with a basic first person controller. The actor itself invokes a dialogue event that lets the dialogue manager know when to enable specific UI elements or images.
 Dialogue is defined as scriptable data objects, allowing designers to write out dialogue and add portraits to a conversation without having to code. 
