--- a/posts/rail-movement.mdx
+++ b/posts/rail-movement.mdx
@@ -1,7 +1,7 @@
 ---
-title: Rail movement using Cinemachine
-description: "A small experiment using Unity's Cinemachine package to imitate Nier camera/gameplay transitions."
-date: Jun 2 2022
+title: Cinemachine for Rail Movement
+description: "A small experiment using Unity's Cinemachine package to imitate Nier's camera/gameplay transitions."
+date: Feb 8 2022
 ---
 
-This is an example post.
+(Under construction)
