--- a/posts/road-mesh-generation.mdx
+++ b/posts/road-mesh-generation.mdx
@@ -1,7 +1,7 @@
 ---
 title: Roads, Benzier curves, and mesh generation
-description: "Test devlog please ignore"
-date: Feb 10 2022
+description: "A small tool for generating roads and meshes from a set of points using Benzier curves."
+date: Feb 8 2022
 ---
 
-This is an example post. There's another one [here](/posts/dialogue-system).
+(Under construction)
