--- a/posts/procedural-generation.mdx
+++ b/posts/procedural-generation.mdx
@@ -4,6 +4,13 @@ description: "Using cellular automata and Djikstra maps to generate/populate lev
 date: Feb 10 2022
 ---
 (Under construction)
-I created a basic game that utilizes cellular automata and binary space partitioning to procedurally create dungeon layouts. 
+I created a basic game that utilizes cellular automata and binary space partitioning to procedurally create dungeon layouts.
+
+(Main project repository)
 https://github.com/GarcGustavo/DungeonAutomata
+
+(Main generation script)
+https://github.com/GarcGustavo/DungeonAutomata/blob/main/_Project/Scripts/Utilities/MapGenerator.cs
+
+(An example of terrain mesh generation I made for an old programming language class project.)
 https://github.com/GarcGustavo/PL_Project
