--- a/posts/urp-shaders.mdx
+++ b/posts/urp-shaders.mdx
@@ -5,3 +5,7 @@ date: Feb 11 2023
 ---
 (Under construction)
 A brief overview of some shaders I made to achieve a 2D doodle aesthetic with 3D lighting using Unity URP.
+
+Crt example: ![Crt example](/crt.gif)
+3D URP lighting on 2D sprites and doodle effect example: ![URP lighting example](/sprite_shading.gif)
+Game of life compute shader example: ![Compute shader example](/compute.gif)
