--- a/posts/road-mesh-generation.mdx
+++ b/posts/road-mesh-generation.mdx
@@ -3,4 +3,7 @@ title: Roads, Benzier curves, and mesh generation
 description: "A small tool for generating roads and meshes from a set of points using Benzier curves."
 date: Feb 8 2022
 ---
+
 (Under construction)
+
+Road mesh generation example: ![Road mesh generation example](/curves.gif)
